# rwm

./: .gitignore  CMakeLists.txt  Makefile  README  README-old  desktopIconPosition.xml  install.sh  rwm-gdm.desktop  rwm-kdm.desktop  rwm-project.kdev4  rwm.cfg  rwm.pro  rwm.pro.user.1.3  ui_about.h  uninstall.sh
.kdev4/: rwm-project.kdev4
config/: desktopIconPosition.xml  rwm.cfg
forms/: about.ui
general/: desktopIconPosition.xml  rwm.cfg
inc/: about.h  dateclock.h  desk.h  deskfolder.h  dockapp.h  dockbartop.h  dockicon.h  filedialog.h  frame.h  images.h  manager.h  paths.h  popup.h  rwm.h  trash.h  utils.h  xmlparser.h
src/: about.cpp  about.ui  border.cpp  colordialog.cpp  colorsel.cpp  dateclock.cpp  desk.cpp  deskapp.cpp  deskapp.h  deskdev.cpp  deskfile.cpp  deskfolder.cpp  deskicon.cpp  dockapp.cpp  dockapp.h  dockbar.cpp  dockbar.h  dockbartop.cpp  dockicon.cpp  dockmenu.cpp  effects.cpp  filedialog.cpp  frame.cpp  frame.h  header.cpp  images.cpp  launcher.cpp  launcher.h  main.cpp  manager.cpp  msgbox.cpp  paths.cpp  popup.cpp  runner.cpp  rwm.cpp  rwm.h  settings.cpp  sysicon.cpp  systray.cpp  trash.cpp  (+3 more)
src/h/: deskfile.h  dockbar.h  launcher.h  manager.h
theme/default/: default.stl
themes/default/: default.stl
translations/: pt_BR.ts
